--- a/discord.html
+++ b/discord.html
@@ -37,6 +37,9 @@
   </svg>
         <span class="loading-text">Loading...</span>
     </div>
+ <div class="copyright-bar">
+        جميع الحقوق محفوظة © Nashmi Code 2025
+    </div>
 
 
 </body>
