--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </a>
 
             <!-- Discord -->
-            <a href="https://discord.gg/y42XZAMkkh" target="_blank" class="Btn discord">
+            <a href="discord.html" target="_blank" class="Btn discord">
                 <span class="svgContainer">
     <svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240" class="svgIcon">
       <path d="M104.4 104.9c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.3-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1zm36.3 0c-5.7 0-10.2 5-10.2 11.1s4.6 11.1 10.2 11.1c5.7 0 10.3-5 10.2-11.1.1-6.1-4.5-11.1-10.2-11.1z"/>
