--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="buttons-container">
             <!-- YouTube -->
-            <a href="https://www.youtube.com/@NashmiCode" target="_blank" class="Btn youtube">
+            <a href="./youtube/youtube.html" target="_blank" class="Btn youtube">
                 <span class="svgContainer">
     <svg fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svgIcon">
       <path d="M549.7 124.1c-6.3-23.7-24.9-42.3-48.6-48.6C456.5 64 288 64 288 64S119.5 64 74.9 75.4C51.2 81.7 32.6 100.3 26.3 124 16.9 168.7 16.9 256 16.9 256s0 87.3 9.4 131.9c6.3 23.7 24.9 42.3 48.6 48.6C119.5 448 288 448 288 448s168.5 0 213.1-11.4c23.7-6.3 42.3-24.9 48.6-48.6 9.4-44.6 9.4-131.9 9.4-131.9s0-87.3-9.4-131.9zM232 336V176l142 80-142 80z"/>
