--- a/youtube/youtube.html
+++ b/youtube/youtube.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Photos/IMG_20250621_182841_272.webp" type="image/png">
     <title>Nashmi Code</title>
-    <link rel=" stylesheet " href="discord.css " />
+    <link rel=" stylesheet " href="youtube.css " />
 
 
 
